{
    "name": "TouchControls",
    "maps": [
        {
            "name": "TouchMap",
            "id": "55f588ad-7cda-4085-baae-82cf8c01ec89",
            "actions": [
                {
                    "name": "PrimaryFingerPosition",
                    "type": "Value",
                    "id": "ff0b8a0d-60ef-40ff-b989-5c4dfffc1625",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PrimaryFingerDelta",
                    "type": "Value",
                    "id": "9d93aac0-0bf3-4bc6-922e-4326bd7a296c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PrimaryFingerTouch",
                    "type": "Button",
                    "id": "0a3bdb32-a628-40cd-b01f-eeeb504ecc00",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2de65361-4e5a-4f2a-8f03-deed8ea1636e",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryFingerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "73989162-5d5c-4156-8c24-2aa2d691fa08",
                    "path": "<Touchscreen>/touch0/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryFingerDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "afc7c931-198f-46f2-9698-b187504240e1",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryFingerTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}